spade-tests/src/snapshots/spade_tests__verilator_wrapper__wrapper_works.snap
---
source: spade-tests/src/verilator_wrapper.rs
---
#if __has_include(<Vno_mangle.h>)
#include <Vno_mangle.h>
class no_mangle_spade_t;
class no_mangle_spade_t_i;
no_mangle_spade_t_i* init_no_mangle_spade_t_i(no_mangle_spade_t& t);
class no_mangle_spade_t {
    public:
        no_mangle_spade_t(std::string spade_state, std::string spade_top, Vno_mangle* top)
            : s_ext(spade::setup_spade(spade_top, spade_state))
            , top(top)
            , i(init_no_mangle_spade_t_i(*this))
        {
        }
        no_mangle_spade_t_i* i;
        rust::Box<spade::SimulationExt> s_ext;
        Vno_mangle* top;
};
class no_mangle_spade_t_i {
    public:
        no_mangle_spade_t_i(no_mangle_spade_t& parent)
            : parent(parent)
        {}
    private:
        no_mangle_spade_t& parent;
};
no_mangle_spade_t_i* init_no_mangle_spade_t_i(no_mangle_spade_t& t) {
    return new no_mangle_spade_t_i(t);
}
#endif
